Refactoring and added advance booking and user update feature